idea/testData/multiModuleLineMarker/fromCommonToJvmImpl/jvm/jvm.kt
actual class <!LINE_MARKER("descr='Has declaration in common module'")!>Header<!> {
    actual fun <!LINE_MARKER("descr='Has declaration in common module'")!>foo<!>() = 42
}

actual class <!LINE_MARKER("descr='Has declaration in common module'")!>Incomplete<!>

actual fun <!LINE_MARKER("descr='Has declaration in common module'")!>foo<!>(arg: Int) = arg.toString()

actual val <!LINE_MARKER("descr='Has declaration in common module'")!>flag<!> = true


